--- a/estudos/templates/estudos/pages/home.html
+++ b/estudos/templates/estudos/pages/home.html
@@ -1,12 +1,12 @@
 {% include "estudos/parcials/head.html" %}
 
 <body>
-    <header class="main-header-container"></header>
+    <header class="main-header-container">
         <div class="main-header container">
             <h1>
-                <a href="/">
-                    <i class="fa-solid fa-book"></i>
-                     <span>Kstudy</span>
+                <a class="main-logo" href="/">
+                    <i class="fa-solid fa-book main-logo-icon"></i>
+                     <span class="main-logo-text">Kstudy</span>
                 </a>
             </h1>
         </div>
