--- a/estudos/templates/estudos/parcials/head.html
+++ b/estudos/templates/estudos/parcials/head.html
@@ -1,38 +1,36 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/fontawesome.min.css"
-      integrity="sha512-M5Kq4YVQrjg5c2wsZSn27Dkfm/2ALfxmun0vUE3mPiJyK53hQBHYCVAtvMYEC7ZXmYLg8DVG4tF8gD27WmDbsg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/fontawesome.min.css"
+    integrity="sha512-M5Kq4YVQrjg5c2wsZSn27Dkfm/2ALfxmun0vUE3mPiJyK53hQBHYCVAtvMYEC7ZXmYLg8DVG4tF8gD27WmDbsg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/brands.min.css"
-      integrity="sha512-WxpJXPm/Is1a/dzEdhdaoajpgizHQimaLGL/QqUIAjIihlQqlPQb1V9vkGs9+VzXD7rgI6O+UsSKl4u5K36Ydw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/brands.min.css"
+    integrity="sha512-WxpJXPm/Is1a/dzEdhdaoajpgizHQimaLGL/QqUIAjIihlQqlPQb1V9vkGs9+VzXD7rgI6O+UsSKl4u5K36Ydw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/solid.min.css"
-      integrity="sha512-EHa6vH03/Ty92WahM0/tet1Qicl76zihDCkBnFhN3kFGQkC+mc86d7V+6y2ypiLbk3h0beZAGdUpzfMcb06cMg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/solid.min.css"
+    integrity="sha512-EHa6vH03/Ty92WahM0/tet1Qicl76zihDCkBnFhN3kFGQkC+mc86d7V+6y2ypiLbk3h0beZAGdUpzfMcb06cMg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap"
-      rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap"
+    rel="stylesheet">
 
-    <title>Home</title>
+  <title>Home</title>
 
-    <style>
+  <style>
           :root {
             --color-primary: #269fe6;
             --color-primary-hover: #2086c2;
@@ -90,6 +88,7 @@
       body {
         font-size: 1.6rem;
         font-family: var(--font-primary);
+        background-color: var(--color-gray-1);
       }
 
       .container{
@@ -118,13 +117,45 @@
         margin-right: 1rem;
       }
 
-      .main-logo-text{
-
-      }
-
       h1,h2,h3,h4,h5,h6{
         font-family: var(--font-headings);
       }
+
+      .search-form{
+        border: .2rem solid var(--color-primary-dark);
+        max-width: 64rem;
+        margin: 0 auto;
+        border-radius: .4rem;
+        position: relative;
+        transition: all 300ms ease-in-out;
+      }
+
+      .search-input, .search-button{
+        border: none;
+        background: none;
+        outline: none;
+        padding: 1rem;
+        transition: all 300ms ease-in-out;
+      }
+
+      .search-input{
+        width: 100%;
+        padding-right: 3rem;
+      }
+
+      .search-button{
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+
+      .search-form:focus-within{
+        border-color: var(--color-primary);
+        background-color: var(--color-white);
+      }
+
+      .search-form:focus-within .search-button{
+        color: var(--color-primary);
+      }
     </style>
-  </head>
-</html>
+</head>
