feat: add seção deconteúdo principal

--- a/estudos/templates/estudos/pages/home.html
+++ b/estudos/templates/estudos/pages/home.html
@@ -5,5 +5,6 @@
     <body>
         {% include "estudos/parcials/header.html" %}
         {% include "estudos/parcials/search.html" %}
+        {% include "estudos/parcials/subject.html" %}
     </body>
 </html>
