fix: include no home.html do subject.html

--- a/estudos/templates/estudos/pages/home.html
+++ b/estudos/templates/estudos/pages/home.html
@@ -5,6 +5,12 @@
     <body>
         {% include "estudos/parcials/header.html" %}
         {% include "estudos/parcials/search.html" %}
-        {% include "estudos/parcials/subject.html" %}
+
+        <main class="main-content-container">
+            <div class="main-content main-content-list container">
+                {% include "estudos/parcials/subject.html" %}
+            </div>
+        </main>
+
     </body>
 </html>
