--- a/estudos/templates/estudos/pages/home.html
+++ b/estudos/templates/estudos/pages/home.html
@@ -11,6 +11,6 @@
                 {% include "estudos/parcials/subject.html" %}
             </div>
         </main>
-
+        {% include "estudos/parcials/footer.html" %}
     </body>
 </html>
