--- a/estudos/templates/estudos/parciais/materia.html
+++ b/estudos/templates/estudos/parciais/materia.html
@@ -1,22 +1,22 @@
-<div class="subject subject-list-item">
-  <div class="subject-cover">
+<div class="materia materia-lista-item">
+  <div class="materia-cover">
     <img src="https://placehold.co/1280x720" alt="temp" />
   </div>
 
-  <div class="subject-title-container">
-    <h2 class="subject-title">Lorem ipsum dolor sit amet.</h2>
+  <div class="materia-titulo-conteiner">
+    <h2 class="materia-titulo">Lorem ipsum dolor sit amet.</h2>
   </div>
 
-  <div class="subject-author">
-    <span class="subject-author-item">
+  <div class="materia-autor">
+    <span class="materia-autor-item">
       <i class="fas fa-user"></i>
       Kauã de Andrade Rodrigues
     </span>
-    <span class="subject-author-item">
+    <span class="materia-autor-item">
       <i class="fas fa-calendar-alt"></i>
       26/02/2026 às 19:52
     </span>
-    <span class="subject-author-item">
+    <span class="materia-autor-item">
       <a href="/subject/category/programacao">
         <i class="fa-solid fa-computer"></i>
         <span>Programação</span>
@@ -24,7 +24,7 @@
     </span>
   </div>
 
-  <div class="subject-content">
+  <div class="materia-conteudo">
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
       reiciendis, sint corrupti dolorum placeat, numquam enim esse magnam natus
@@ -35,26 +35,26 @@
     </p>
   </div>
 
-  <div class="subject-meta-container">
-    <div class="subject-meta subject-time">
-      <h3 class="subject-meta-title">
+  <div class="materia-meta-conteiner">
+    <div class="materia-meta materia-tempo">
+      <h3 class="materia-meta-titulo">
         <i class="fa-solid fa-stopwatch"></i>
         Horas estudadas
       </h3>
-      <div class="subject-meta-text">10.4 horas</div>
+      <div class="materia-meta-texto">10.4 horas</div>
     </div>
 
-    <div class="subject-meta subject-last-session">
-      <h3 class="subject-meta-title">
+    <div class="materia-meta materia-ultima-sessao">
+      <h3 class="materia-meta-titulo">
         <i class="fa-solid fa-calendar-day"></i>
         Última sessão
       </h3>
-      <div class="subject-meta-text">4 dias atrás</div>
+      <div class="materia-meta-texto">4 dias atrás</div>
     </div>
   </div>
 
-  <footer class="subject-footer">
-    <a href="/subject/3/">
+  <footer class="materia-rodape">
+    <a href="/materias/programacao/">
       <i class="fa-solid fa-eye"></i>
       <span>Ver mais...</span>
     </a>
