--- a/estudos/templates/estudos/parciais/rodape.html
+++ b/estudos/templates/estudos/parciais/rodape.html
@@ -1,4 +1,4 @@
-<footer class="main-footer">
+<footer class="principal-rodape">
     <div class="developer">
         <a
             href="https://github.com/kauandragues"
